fix: Java Linker and Apache lucence lib warning logs